// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 iDbdZb"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 iNXcTU"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 QnEHj"
      >
        <input
          className="Input-qkdgvx-0 knFXDC"
          disabled={true}
          placeholder=" "
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 gpjDkF"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 heGnbI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 kWSQVC"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 heGnbI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 QnEHj"
      >
        <input
          className="Input-qkdgvx-0 iGRmuA"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 heGnbI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 iDbdZb"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 iNXcTU"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 QnEHj"
      >
        <input
          className="Input-qkdgvx-0 knFXDC"
          placeholder=" "
          readOnly={true}
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 iDbdZb"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 iNXcTU"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 QnEHj"
      >
        <input
          className="Input-qkdgvx-0 knFXDC"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 iDbdZb"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 iNXcTU"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 QnEHj"
      >
        <input
          className="Input-qkdgvx-0 knFXDC"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 iDbdZb"
          placeholder="medium"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 iNXcTU"
          placeholder="large"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 QnEHj"
      >
        <input
          className="Input-qkdgvx-0 jjUcJT"
          placeholder="xlarge"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        medium
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 jwwNnQ"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 bJkxLR"
      >
        large
      </label>
      <div
        className="Inner-sc-1soq84i-0 PghWO"
      >
        <input
          className="Input-qkdgvx-0 bNsUKr"
          placeholder="Placeholder"
          type="password"
        />
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 hrjkOU"
      >
        <input
          className="Input-qkdgvx-0 knFXDC"
          placeholder="Placeholder"
          type="password"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
        <div
          className="ShowPassword-sc-147a7th-0 evoMbN"
          onClick={[Function]}
        >
          Show
        </div>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
